[refact] 이미지 저장, 조회 리팩토링